@@ -36,3 +36,4 @@ EXPORTS
     rb_cairo_glyph_to_ruby_object
     rb_cairo_surface_from_ruby_object
     rb_cairo_surface_to_ruby_object
+    rb_cairo_check_status
